// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataObserver Snapshot DataObserver component data={['a', 'b']} 1`] = `
<Text
  style={
    Array [
      undefined,
      undefined,
    ]
  }
>
  Text as a children
</Text>
`;

exports[`DataObserver Snapshot DataObserver component data={[]} 1`] = `
<Text
  style={
    Array [
      undefined,
      undefined,
    ]
  }
>
  Empty
</Text>
`;

exports[`DataObserver Snapshot DataObserver component isEmpty={() => false} isLoading={() => false} 1`] = `
<Text
  style={
    Array [
      undefined,
      undefined,
    ]
  }
>
  Text as a children
</Text>
`;

exports[`DataObserver Snapshot DataObserver component isEmpty={() => false} isLoading={() => true} 1`] = `
<View>
  <ActivityIndicator
    animating={true}
    color="#999999"
    hidesWhenStopped={true}
    size="small"
  />
</View>
`;

exports[`DataObserver Snapshot DataObserver component isEmpty={() => false} loading={true} 1`] = `
<View>
  <ActivityIndicator
    animating={true}
    color="#999999"
    hidesWhenStopped={true}
    size="small"
  />
</View>
`;

exports[`DataObserver Snapshot DataObserver component isEmpty={() => true} isLoading={() => false} 1`] = `
<Text
  style={
    Array [
      undefined,
      undefined,
    ]
  }
>
  Empty
</Text>
`;

exports[`DataObserver Snapshot DataObserver component loading={true} 1`] = `
<View>
  <ActivityIndicator
    animating={true}
    color="#999999"
    hidesWhenStopped={true}
    size="small"
  />
</View>
`;

exports[`DataObserver Snapshot DataObserver component loading={true} 2`] = `
<View>
  <ActivityIndicator
    animating={true}
    color="#999999"
    hidesWhenStopped={true}
    size="small"
  />
</View>
`;

exports[`DataObserver Snapshot DataObserver component with Text 1`] = `
<Text
  style={
    Array [
      undefined,
      undefined,
    ]
  }
>
  hello
</Text>
`;
